tests/ui/dont_panic.stderr
error: indexing operations can panic if the indexed value is out of bounds
  --> $DIR/dont_panic.rs:66:13
   |
66 |     let _ = x[1];
   |             ^^^^
   |
note: the lint level is defined here
  --> $DIR/dont_panic.rs:2:9
   |
2  | #![deny(redpen::panics)]
   |         ^^^^^^^^^^^^^^

error: calling `foo` can panic
  --> $DIR/dont_panic.rs:72:5
   |
72 |     foo();
   |     ^^^^^ this call can panic
   |
note: `foo` can panic here
  --> $DIR/dont_panic.rs:53:5
   |
52 |   fn foo() {
   |   --------
53 |       S.foo();
   |       ^^^^^^^
54 |       S.from_trait();
   |       ^^^^^^^^^^^^^^
55 |       S.from_a_impl();
   |       ^^^^^^^^^^^^^^^
56 |       S.from_impl();
   |       ^^^^^^^^^^^^^
...
59 | /     (|| {
60 | |         panic!();
61 | |     })();
   | |________^
62 |       let x = || panic!();
63 |       x();
   |       ^^^
...
66 |       let _ = x[1];
   |                ^^^
67 |       wont_panic();
68 |       panic!("shouldn't happen!");
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: calling `S::foo` can panic
  --> $DIR/dont_panic.rs:53:5
   |
53 |     S.foo();
   |     ^^^^^^^ this call can panic
   |
note: `S::foo` can panic here
  --> $DIR/dont_panic.rs:7:9
   |
6  |     fn foo(&self) {
   |     -------------
7  |         panic!("");
   |         ^^^^^^^^^^

error: calling `<S as A>::from_trait` can panic
  --> $DIR/dont_panic.rs:54:5
   |
54 |     S.from_trait();
   |     ^^^^^^^^^^^^^^ this call can panic
   |
note: `<S as A>::from_trait` can panic here
  --> $DIR/dont_panic.rs:13:9
   |
12 |     fn from_trait(&self) {
   |     --------------------
13 |         panic!();
   |         ^^^^^^^^
note: `A::from_trait::panic_cold_explicit` can panic here
  --> $DIR/dont_panic.rs:13:9
   |
13 |         panic!();
   |         ^^^^^^^^

error: calling `<S as A>::from_a_impl` can panic
  --> $DIR/dont_panic.rs:55:5
   |
55 |     S.from_a_impl();
   |     ^^^^^^^^^^^^^^^ this call can panic
   |
note: `<S as A>::from_a_impl` can panic here
  --> $DIR/dont_panic.rs:23:9
   |
22 |     fn from_a_impl(&self) {
   |     ---------------------
23 |         panic!();
   |         ^^^^^^^^
note: `<S as A>::from_a_impl::panic_cold_explicit` can panic here
  --> $DIR/dont_panic.rs:23:9
   |
23 |         panic!();
   |         ^^^^^^^^

error: calling `<S as B>::from_impl` can panic
  --> $DIR/dont_panic.rs:56:5
   |
56 |     S.from_impl();
   |     ^^^^^^^^^^^^^ this call can panic
   |
note: `<S as B>::from_impl` can panic here
  --> $DIR/dont_panic.rs:28:9
   |
27 |     fn from_impl(&self) {
   |     -------------------
28 |         panic!();
   |         ^^^^^^^^
note: `<S as B>::from_impl::panic_cold_explicit` can panic here
  --> $DIR/dont_panic.rs:28:9
   |
28 |         panic!();
   |         ^^^^^^^^

error: calling `foo::{closure#0}` can panic
  --> $DIR/dont_panic.rs:59:5
   |
59 | /     (|| {
60 | |         panic!();
61 | |     })();
   | |________^ this call can panic
   |
note: `foo::{closure#0}` can panic here
  --> $DIR/dont_panic.rs:60:9
   |
59 |     (|| {
   |      --
60 |         panic!();
   |         ^^^^^^^^
note: `foo::{closure#0}::panic_cold_explicit` can panic here
  --> $DIR/dont_panic.rs:60:9
   |
60 |         panic!();
   |         ^^^^^^^^

error: calling `foo::{closure#1}` can panic
  --> $DIR/dont_panic.rs:63:5
   |
63 |     x();
   |     ^^^ this call can panic
   |
note: `foo::{closure#1}` can panic here
  --> $DIR/dont_panic.rs:62:16
   |
62 |     let x = || panic!();
   |             -- ^^^^^^^^
note: `foo::{closure#1}::panic_cold_explicit` can panic here
  --> $DIR/dont_panic.rs:62:16
   |
62 |     let x = || panic!();
   |                ^^^^^^^^

error: calling `foo` can panic
  --> $DIR/dont_panic.rs:82:5
   |
82 |     foo();
   |     ^^^^^ this call can panic
   |
note: `foo` can panic here
  --> $DIR/dont_panic.rs:53:5
   |
52 |   fn foo() {
   |   --------
53 |       S.foo();
   |       ^^^^^^^
54 |       S.from_trait();
   |       ^^^^^^^^^^^^^^
55 |       S.from_a_impl();
   |       ^^^^^^^^^^^^^^^
56 |       S.from_impl();
   |       ^^^^^^^^^^^^^
...
59 | /     (|| {
60 | |         panic!();
61 | |     })();
   | |________^
62 |       let x = || panic!();
63 |       x();
   |       ^^^
...
66 |       let _ = x[1];
   |                ^^^
67 |       wont_panic();
68 |       panic!("shouldn't happen!");
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: calling `A` can panic in a trait object
  --> $DIR/dont_panic.rs:48:5
   |
48 |     x.from_trait();
   |     ^^^^^^^^^^^^^^
   |
note: the following `fn` definition can panic
  --> $DIR/dont_panic.rs:13:9
   |
12 |     fn from_trait(&self) {
   |     --------------------
13 |         panic!();
   |         ^^^^^^^^

error: calling `A` can panic in a trait object
  --> $DIR/dont_panic.rs:49:5
   |
49 |     x.from_a_impl();
   |     ^^^^^^^^^^^^^^^
   |
note: the following `fn` definition can panic
  --> $DIR/dont_panic.rs:23:9
   |
22 |     fn from_a_impl(&self) {
   |     ---------------------
23 |         panic!();
   |         ^^^^^^^^

error: aborting due to 11 previous errors

